[package]
name = "tower-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", default-features = false }
axum-extra = { version = "0.7", features = ["cookie"] }
aws-sdk-dynamodb = "0.25"
chrono = "0.4"
either = "1"
futures = "0.3"
http = "0.2"
lambda_http = "0.8"
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_25"] }
tokio = { version = "1", features = ["sync"] }
tower = "0.4"

[dev-dependencies]
aws-config = "0.55"
axum = "0.6"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
