[package]
name = "tower-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", default-features = false }
aws-sdk-kms = "0.27"
base64 = "0.21"
cookie = "0.17"
futures = "0.3"
http = "0.2"
lambda_http = "0.8"
tower = "0.4"

[dev-dependencies]
aws-config = "0.55"
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
