[package]
name = "tower-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false }
aws-sdk-kms = "1"
base64 = "0.21"
cookie = "0.18"
futures = "0.3"
http = "1"
lambda_http = "0.9"
tower = "0.4"
tracing = "0.1"

[dev-dependencies]
aws-config = "1"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
